<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="219dp"
        android:layout_height="109dp"
        app:srcCompat="@drawable/logoalus"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/emailUser"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        />

    <EditText
        android:id="@+id/passwordUser"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:background="@color/colorBlack"
        android:text="Masuk"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LupaPassword"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="40dp"
            android:layout_weight="0"
            />
        <TextView
            android:id="@+id/bantuLupa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bantu Lupa Password"
            android:textColor="@color/colorBlue"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="-30dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="0"
            android:autoLink="all"
            android:linksClickable="true"
            android:onClick="BantuLupaPassword"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ATAU"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="100dp"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:background="@color/colorBlue"
        android:text="@string/MasukGoogle"
        android:textColor="@color/colorWhite"
        android:drawableLeft="@drawable/gogle"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BelumAkun"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daftar"
            android:textColor="@color/colorBlue"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="-29dp"
            android:autoLink="all"
            android:linksClickable="true"
            android:onClick="Daftar"
            />

    </LinearLayout>

</LinearLayout>